viewer/bridge/tidyvnc.h


typedef uint64_t tidyvnc_handle;
typedef uint32_t tidyvnc_status;
typedef struct { const uint8_t* data; uint64_t length; } tidyvnc_bytes;
typedef struct {
  uint32_t size, version, action, count, operand_argument, reserved;
  tidyvnc_bytes operand;
} tidyvnc_invocation_info;
typedef struct {
  uint32_t size, version, category, argument, value_argument, reserved;
  char name[64];
  tidyvnc_bytes value;
} tidyvnc_invocation_assignment;
typedef struct {
  uint32_t size, version, category, boolean, available, reserved;
  char name[64], alias[64];
} tidyvnc_invocation_option;
typedef struct { uint32_t size, version, count, legacy_header; } tidyvnc_document_info;
typedef struct {
  uint32_t size, version, line, reserved;
  char name[255], value[256]; 
} tidyvnc_document_entry;
typedef struct { tidyvnc_bytes name, value; } tidyvnc_document_assignment;
typedef struct { uint8_t* data; uint64_t length; } tidyvnc_mutable_bytes;
typedef struct {
  uint32_t size, version, transport, port;
  tidyvnc_bytes host, scope, path, route;
} tidyvnc_endpoint_info;
typedef struct { tidyvnc_bytes name, value; } tidyvnc_encoding_assignment;
typedef struct {
  uint32_t size, version, id, type;
  int32_t minimum, maximum;
  uint32_t persistent, live;
  char name[32], alias[32], default_value[32]; 
} tidyvnc_encoding_schema;
typedef struct {
  uint32_t size, version, available;
  int32_t wire_encoding;
  char name[32];
} tidyvnc_encoding_choice;
typedef struct {
  uint32_t size, version, id, source;
  char value[32]; 
} tidyvnc_encoding_value;
typedef struct {
  uint32_t size, version, code, domain;
  uint32_t detail; int32_t native_error;
  char message[160]; 
} tidyvnc_error;
typedef struct {
  uint32_t size, version;
  uint32_t security_count, security_types[32]; 
  uint32_t prompt_timeout_ms, event_capacity, command_capacity, reserved;
  uint64_t framebuffer_bytes, publication_bytes;
  tidyvnc_bytes tls_priority, ca_file, crl_file; 
} tidyvnc_session_options;
typedef struct {
  uint32_t size, version, pointer_interval_ms, reserved;
} tidyvnc_input_timing;
typedef struct {
  uint32_t size, version, max_cut_text, reserved;
} tidyvnc_message_limits;
typedef struct {
  uint32_t size, version, flags, reserved;
  int32_t width, height, x, y;
} tidyvnc_window_geometry;
typedef struct {
  uint32_t size, version, ipv4, ipv6;
  uint32_t resolve_timeout_ms, connect_timeout_ms, address_timeout_ms, reserved;
  tidyvnc_bytes endpoint; 
} tidyvnc_connect_options;
typedef struct {
  uint32_t size, version;
  uint64_t operation, generation;
} tidyvnc_operation;
typedef struct {
  uint32_t size, version, state, end_reason;
  int32_t native_error; uint32_t width, height, supports_resize, resize_pending, reserved;
  uint64_t generation, frames, bells;
} tidyvnc_snapshot;
typedef struct { uint32_t id, x, y, width, height, flags; } tidyvnc_remote_screen;
typedef struct {
  uint32_t size, version, width, height, screen_count, reserved;
  const tidyvnc_remote_screen* screens; 
} tidyvnc_desktop_layout_request;
typedef struct {
  uint32_t size, version, screen_count, reserved;
  tidyvnc_snapshot snapshot; 
  tidyvnc_remote_screen screens[255]; 
} tidyvnc_desktop_layout;
typedef struct {
  uint32_t id;
  int32_t x, y;
  uint32_t width, height, backing_width, backing_height;
} tidyvnc_display_monitor;
typedef struct {
  uint32_t size, version, monitor_count, device_pixels;
  const tidyvnc_display_monitor* monitors; 
} tidyvnc_display_layout_request;
typedef struct {
  uint32_t size, version, width, height, screen_count, normalized;
  tidyvnc_remote_screen screens[64]; 
} tidyvnc_display_layout;
typedef struct {
  uint32_t size, version, protocol_major, protocol_minor;
  uint32_t security_type, credentials_secure, name_truncated, reserved;
  int32_t requested_encoding, last_encoding; 
  uint64_t bits_per_second;
  tidyvnc_snapshot snapshot; 
  char desktop_name[1025], pixel_format[128], security_name[64];
  char requested_encoding_name[32], last_encoding_name[32];
} tidyvnc_connection_info;
typedef struct {
  uint32_t size, version, kind, result, failure, native_result;
  uint64_t sequence, operation, origin;
  tidyvnc_snapshot snapshot;
} tidyvnc_event;
typedef struct {
  uint32_t size, version, frame_changed, cursor_changed;
  uint64_t generation;
  tidyvnc_handle frame, cursor; 
  uint32_t damage_x, damage_y, damage_width, damage_height;
} tidyvnc_view_update;
typedef struct {
  uint32_t size, version, width, height, format, alpha, origin, reserved;
  uint64_t stride, generation, size_generation, sequence;
  uint32_t hotspot_x, hotspot_y;
  tidyvnc_bytes pixels; 
} tidyvnc_image_info;
typedef struct {
  uint32_t size, version;
  void* context;
  void (*retain_context)(void*);
  void (*release_context)(void*);
  void (*ready)(void*, tidyvnc_handle subscription, uint64_t generation);
  uint64_t reserved;
} tidyvnc_callbacks;
TIDYVNC_API tidyvnc_status tidyvnc_listener_poll_drained(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_subscribe(tidyvnc_handle, const tidyvnc_callbacks*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_create(tidyvnc_handle runtime, const tidyvnc_session_options*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_information(tidyvnc_handle session, uint64_t generation,
                                          tidyvnc_connection_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_endpoint_validate(tidyvnc_bytes endpoint, uint32_t allow_unix_sockets, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_endpoint_create(tidyvnc_bytes endpoint, tidyvnc_bytes route,
  uint32_t allow_unix_sockets, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_endpoint_get(tidyvnc_handle, tidyvnc_endpoint_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_port_parse(tidyvnc_bytes, uint32_t* port, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_native_error_category(int32_t native_error, uint32_t* category, tidyvnc_error*);
typedef struct {
  uint32_t size, version, kind, security_type, shape, allow_unix_sockets, port, reserved;
  tidyvnc_bytes endpoint, route, username, host_key_alias;
} tidyvnc_identity_request;
typedef struct {
  uint32_t size, version;
  char text[80]; 
} tidyvnc_identity;
TIDYVNC_API tidyvnc_status tidyvnc_identity_digest(const tidyvnc_identity_request*, tidyvnc_identity*, tidyvnc_error*);
typedef struct {
  uint32_t size, version, port, flags;
  tidyvnc_bytes host, scope, user, canonical_uri;
} tidyvnc_ssh_gateway_info;
TIDYVNC_API tidyvnc_status tidyvnc_ssh_gateway_create(tidyvnc_bytes, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_ssh_gateway_get(tidyvnc_handle, tidyvnc_ssh_gateway_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_document_parse(tidyvnc_bytes, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_invocation_parse(const tidyvnc_bytes*, uint32_t count, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_invocation_validate(tidyvnc_handle, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_invocation_get(tidyvnc_handle, tidyvnc_invocation_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_invocation_assignment_at(tidyvnc_handle, uint32_t index, tidyvnc_invocation_assignment*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_invocation_option_at(uint32_t index, tidyvnc_invocation_option*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_document_get(tidyvnc_handle, tidyvnc_document_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_document_entry_at(tidyvnc_handle, uint32_t index, uint32_t decode_value, tidyvnc_document_entry*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_document_option_at(tidyvnc_handle, uint32_t index, tidyvnc_document_entry*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_document_serialize(const tidyvnc_document_assignment*, uint32_t count, tidyvnc_mutable_bytes output, uint64_t* size, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_encoding_schema_at(uint32_t index, tidyvnc_encoding_schema*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_encoding_choice_at(uint32_t index, tidyvnc_encoding_choice*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_encoding_create(tidyvnc_handle base, const tidyvnc_encoding_assignment*, uint32_t count, uint32_t source, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_encoding_get(tidyvnc_handle, uint32_t option, tidyvnc_encoding_value*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_create_with_encoding(tidyvnc_handle runtime, const tidyvnc_session_options*, tidyvnc_handle encoding, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_input_timing_init(tidyvnc_input_timing*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_create_with_input_timing(tidyvnc_handle runtime, const tidyvnc_session_options*,
  tidyvnc_handle encoding, const tidyvnc_input_timing*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_window_geometry_parse(tidyvnc_bytes, tidyvnc_window_geometry*, tidyvnc_error*);
typedef struct {
  uint32_t size, version, width, height;
} tidyvnc_desktop_size;
TIDYVNC_API tidyvnc_status tidyvnc_desktop_size_parse(tidyvnc_bytes, uint32_t syntax, tidyvnc_desktop_size*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_message_limits_init(tidyvnc_message_limits*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_create_with_message_limits(tidyvnc_handle runtime, const tidyvnc_session_options*,
  tidyvnc_handle encoding, const tidyvnc_input_timing*, const tidyvnc_message_limits*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_encoding(tidyvnc_handle, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_apply_encoding(tidyvnc_handle, uint64_t generation, tidyvnc_handle encoding, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_connect(tidyvnc_handle, const tidyvnc_connect_options*, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_connect_routed(tidyvnc_handle, tidyvnc_handle target,
  const tidyvnc_connect_options*, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_disconnect(tidyvnc_handle, uint64_t generation, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_refresh(tidyvnc_handle, uint64_t generation, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_display_layout_compute(const tidyvnc_display_layout_request*, tidyvnc_display_layout*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_desktop_layout_validate(const tidyvnc_desktop_layout_request*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_desktop_layout(tidyvnc_handle, uint64_t generation, tidyvnc_desktop_layout*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_request_desktop_layout(tidyvnc_handle, uint64_t generation,
  const tidyvnc_desktop_layout_request*, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_cancel_operation(tidyvnc_handle, uint64_t generation, uint64_t operation, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_close(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_poll_drained(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_snapshot(tidyvnc_handle, tidyvnc_snapshot*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_subscribe(tidyvnc_handle, const tidyvnc_callbacks*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_subscription_unsubscribe(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_subscription_poll_drained(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_subscription_validate(tidyvnc_handle, uint64_t generation, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_take_event(tidyvnc_handle, tidyvnc_event*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_take_view(tidyvnc_handle, tidyvnc_view_update*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_image_get(tidyvnc_handle, tidyvnc_image_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_key(tidyvnc_handle, uint64_t generation, uint32_t key_id, uint32_t keysym, uint32_t keycode, uint32_t down, tidyvnc_error*);