platform/windows/TidyVNC.Native/Bridge/Interop.g.cs


    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_poll_drained(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_subscribe(ulong p0, tidyvnc_callbacks* p1, ulong* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_create(ulong runtime, tidyvnc_session_options* p1, ulong* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_information(ulong session, ulong generation, tidyvnc_connection_info* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_endpoint_validate(tidyvnc_bytes endpoint, uint allow_unix_sockets, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_endpoint_create(tidyvnc_bytes endpoint, tidyvnc_bytes route, uint allow_unix_sockets, ulong* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_endpoint_get(ulong p0, tidyvnc_endpoint_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_port_parse(tidyvnc_bytes p0, uint* port, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_native_error_category(int native_error, uint* category, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_identity_digest(tidyvnc_identity_request* p0, tidyvnc_identity* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_ssh_gateway_create(tidyvnc_bytes p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_ssh_gateway_get(ulong p0, tidyvnc_ssh_gateway_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_document_parse(tidyvnc_bytes p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_invocation_parse(tidyvnc_bytes* p0, uint count, ulong* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_invocation_validate(ulong p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_invocation_get(ulong p0, tidyvnc_invocation_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_invocation_assignment_at(ulong p0, uint index, tidyvnc_invocation_assignment* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_invocation_option_at(uint index, tidyvnc_invocation_option* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_document_get(ulong p0, tidyvnc_document_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_document_entry_at(ulong p0, uint index, uint decode_value, tidyvnc_document_entry* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_document_option_at(ulong p0, uint index, tidyvnc_document_entry* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_document_serialize(tidyvnc_document_assignment* p0, uint count, tidyvnc_mutable_bytes output, ulong* size, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_encoding_schema_at(uint index, tidyvnc_encoding_schema* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_encoding_choice_at(uint index, tidyvnc_encoding_choice* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_encoding_create(ulong @base, tidyvnc_encoding_assignment* p1, uint count, uint source, ulong* p4, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_encoding_get(ulong p0, uint option, tidyvnc_encoding_value* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_create_with_encoding(ulong runtime, tidyvnc_session_options* p1, ulong encoding, ulong* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_input_timing_init(tidyvnc_input_timing* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_create_with_input_timing(ulong runtime, tidyvnc_session_options* p1, ulong encoding, tidyvnc_input_timing* p3, ulong* p4, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_window_geometry_parse(tidyvnc_bytes p0, tidyvnc_window_geometry* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_size_parse(tidyvnc_bytes p0, uint syntax, tidyvnc_desktop_size* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_message_limits_init(tidyvnc_message_limits* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_create_with_message_limits(ulong runtime, tidyvnc_session_options* p1, ulong encoding, tidyvnc_input_timing* p3, tidyvnc_message_limits* p4, ulong* p5, tidyvnc_error* p6);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_encoding(ulong p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_apply_encoding(ulong p0, ulong generation, ulong encoding, tidyvnc_operation* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_connect(ulong p0, tidyvnc_connect_options* p1, tidyvnc_operation* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_connect_routed(ulong p0, ulong target, tidyvnc_connect_options* p2, tidyvnc_operation* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_disconnect(ulong p0, ulong generation, tidyvnc_operation* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_refresh(ulong p0, ulong generation, tidyvnc_operation* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_display_layout_compute(tidyvnc_display_layout_request* p0, tidyvnc_display_layout* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_layout_validate(tidyvnc_desktop_layout_request* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_desktop_layout(ulong p0, ulong generation, tidyvnc_desktop_layout* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_request_desktop_layout(ulong p0, ulong generation, tidyvnc_desktop_layout_request* p2, tidyvnc_operation* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_cancel_operation(ulong p0, ulong generation, ulong operation, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_close(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_poll_drained(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_snapshot(ulong p0, tidyvnc_snapshot* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_subscribe(ulong p0, tidyvnc_callbacks* p1, ulong* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_subscription_unsubscribe(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_subscription_poll_drained(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_subscription_validate(ulong p0, ulong generation, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_take_event(ulong p0, tidyvnc_event* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_take_view(ulong p0, tidyvnc_view_update* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_image_get(ulong p0, tidyvnc_image_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_key(ulong p0, ulong generation, uint key_id, uint keysym, uint keycode, uint down, tidyvnc_error* p6);
